--- a/vercel.json
+++ b/vercel.json
@@ -12,10 +12,7 @@
     "routes": [
         {
             "src": "/static/(.*)",
-            "dest": "/staticfiles/$1",
-            "headers": {
-                "Cache-Control": "public, max-age=31536000, immutable"
-            }
+            "dest": "/staticfiles/$1"
         },
         {
             "src": "/files/(.*)",
