test json file 2

--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,30 @@
 {
+    "version": 2,
+    "builds": [
+        {
+            "src": "mysite/wsgi.py",
+            "use": "@vercel/python"
+        },
+        {
+            "src": "build_files.sh",
+            "use": "@vercel/static-build",
+            "config": {
+                "distDir": "staticfiles"
+            }
+        }
+    ],
     "routes": [
-      {
-        "src": "/static/(.*)",
-        "dest": "/staticfiles/$1"
-      },
-      {
-        "src": "/files/(.*)",
-        "dest": "/uploads/$1"
-      },
-      {
-        "src": "/(.*)",
-        "dest": "mysite/wsgi.py"
-      }
+        {
+            "src": "/static/(.*)",
+            "dest": "/static/$1"
+        },
+        {
+            "src": "/files/(.*)",
+            "dest": "/files/$1"
+        },
+        {
+            "src": "/(.*)",
+            "dest": "mysite/wsgi.py"
+        }
     ]
-  }
-  
+}
