--- a/vercel.json
+++ b/vercel.json
@@ -3,13 +3,9 @@
     "builds": [
         {
             "src": "mysite/wsgi.py",
-            "use": "@vercel/python"
-        },
-        {
-            "src": "build_files.sh",
-            "use": "@vercel/static-build",
+            "use": "@vercel/python",
             "config": {
-                "distDir": "staticfiles"
+                "maxLambdaSize": "15mb"
             }
         }
     ],
